--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   hive: ^2.2.3
   hive_generator: ^2.0.1
   build_runner: ^2.4.11
+  image_picker: ^1.1.2
+  path_provider: ^2.1.4
+  smooth_page_indicator: ^1.2.0+3
+  interactive_slider: ^0.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
