--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,12 @@ dependencies:
   path_provider: ^2.1.4
   smooth_page_indicator: ^1.2.0+3
   interactive_slider: ^0.2.2
-  path: any
+  wakelock_plus: ^1.2.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  change_app_package_name: ^1.3.0
 
 flutter:
   uses-material-design: true
@@ -57,4 +58,3 @@ flutter:
     - family: Poppins-Bold
       fonts:
         - asset: assets/fonts/Poppins/Poppins-Bold.ttf
-
