--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   hugeicons: ^0.0.7
   font_awesome_flutter: ^10.7.0
   provider: ^6.1.2
-  flutter_launcher_icons: ^0.13.1
   cached_network_image: ^3.4.1
   animated_segmented_tab_control: ^2.0.0
   smooth_sheets: ^0.9.3
@@ -32,10 +31,11 @@ dependencies:
   image_picker: ^1.1.2
   path_provider: ^2.1.4
   smooth_page_indicator: ^1.2.0+3
-  interactive_slider: ^0.2.2
   wakelock_plus: ^1.2.8
   palette_generator: ^0.3.3+4
   dynamic_color: ^1.7.0
+  ionicons: ^0.2.2
+  video_player: ^2.9.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -47,6 +47,7 @@ flutter:
 
   assets: 
     - assets/images/
+    - assets/images/avatars/
 
   fonts:
     - family: Poppins
