--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   dynamic_color: ^1.7.0
   ionicons: ^0.2.2
   video_player: ^2.9.1
+  path: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
