--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   ionicons: ^0.2.2
   video_player: ^2.9.1
   path: any
+  platform: ^3.1.5
+  device_info_plus: ^10.1.2
+  shimmer: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
