--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   platform: ^3.1.5
   device_info_plus: ^10.1.2
   shimmer: ^3.0.0
+  fluttertoast: ^8.2.8
+  url_launcher: ^6.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
