--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   url_launcher: ^6.3.0
   crypto: ^3.0.5
   pointycastle: ^3.9.1
+  flutter_appauth: ^7.0.1
+  flutter_secure_storage: ^4.2.1
+  flutter_dotenv: ^5.1.0
+  graphql_flutter: ^5.2.0-beta.7
+  flutter_web_auth: ^0.5.0
+  iconify_flutter: ^0.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,6 +62,7 @@ flutter:
   assets: 
     - assets/images/
     - assets/images/avatars/
+    - .env
 
   fonts:
     - family: Poppins
