--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   graphql_flutter: ^5.2.0-beta.7
   flutter_web_auth: ^0.5.0
   iconify_flutter: ^0.0.5
+  html: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
