--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     <!-- Add network permissions here -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- Wakelock permissionn -->
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:label="AnymeX" 
