--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
   path_provider: ^2.1.4
   smooth_page_indicator: ^1.2.0+3
   wakelock_plus: ^1.2.8
-  palette_generator: ^0.3.3+4
   dynamic_color: ^1.7.0
   ionicons: ^0.2.2
   video_player: ^2.9.2
@@ -40,7 +39,6 @@ dependencies:
   platform: ^3.1.5
   device_info_plus: ^10.1.2
   shimmer: ^3.0.0
-  fluttertoast: ^8.2.8
   url_launcher: ^6.3.0
   crypto: ^3.0.5
   flutter_appauth: ^7.0.1
@@ -50,10 +48,9 @@ dependencies:
   iconify_flutter: ^0.0.5
   html: any
   transformable_list_view: ^0.6.0
-  flick_video_player: ^0.9.0
   encrypt: ^5.0.3
   algorithmic: ^0.0.11
-  subtitle_wrapper_package: ^2.2.1
+  flutter_js: ^0.8.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
