--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   transformable_list_view: ^0.6.0
   encrypt: ^5.0.3
   algorithmic: ^0.0.11
-  flutter_js: ^0.8.1
+  google_fonts: ^6.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
