--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,26 +1,37 @@
-name: Release Drafter
+name: Generate Changelog
 
 on:
   push:
-    tags:
-      - 'v*'  # Trigger the workflow only on tag pushes that start with 'v'
+    branches:
+      - main
+      - master
+  workflow_dispatch:
 
 jobs:
-  draft-release:
+  changelog:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Release Drafter
-        uses: release-drafter/release-drafter@v5
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          config-name: release-drafter.yml
+          node-version: 18
+
+      - name: Install Conventional Changelog CLI
+        run: npm install -g conventional-changelog-cli
+
+      - name: Generate Changelog
+        run: conventional-changelog -p angular -i CHANGELOG.md -s
+
+      - name: Commit Changelog
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create Release
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: release-drafter.yml
-          token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add CHANGELOG.md
+          git commit -m "docs: update changelog [skip ci]"
+          git push origin ${{ github.ref }}
