ci: another error fix

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,34 +15,35 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Fetch the full commit history
+          fetch-depth: 0  # Ensure full commit history is fetched, including all tags
 
       - name: Get list of tags
         id: tags
         run: |
           git fetch --tags
-          tags=$(git tag -l)
-          echo "Tags found: $tags" # For debugging
-          echo "::set-output name=tags::$tags" # Set output for the next step
+          # Get all tags and sort them by version in reverse order
+          tags=$(git tag -l | sort -V)  # Use sort -V to sort tags based on version numbers
+          echo "Tags found: $tags"  # For debugging
+          echo "::set-output name=tags::$tags"  # Pass tags to the next step
 
       - name: Generate Changelog
         run: |
           echo "# Changelog" > CHANGELOG.md
           echo "" >> CHANGELOG.md
 
-          # Iterate through each tag and grab commits between versions
+          # Initialize previous tag variable
           prev_tag=""
           for tag in ${{ steps.tags.outputs.tags }}; do
             if [ -z "$prev_tag" ]; then
-              # For the first tag, get commits from the initial commit to the tag
+              # First tag, include all commits up to this tag
               echo "## $tag" >> CHANGELOG.md
               git log --pretty=format:"- %h %s (%an, %ad)" --date=short $tag >> CHANGELOG.md
             else
-              # For subsequent tags, get commits between the previous tag and the current tag
+              # Subsequent tags, get commits between previous tag and current tag
               echo "## $tag" >> CHANGELOG.md
               git log --pretty=format:"- %h %s (%an, %ad)" --date=short $prev_tag..$tag >> CHANGELOG.md
             fi
-            prev_tag=$tag
+            prev_tag=$tag  # Update previous tag for the next iteration
           done
 
       - name: Commit and Push Changelog
