--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   dio: ^5.7.0
   permission_handler: ^11.3.1
   flutter_local_notifications: ^18.0.1
+  video_player: ^2.9.2
+  fvp: ^0.28.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
