build: changed package name

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "aurora",
-    "short_name": "aurora",
+    "name": "anymex",
+    "short_name": "anymex",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#00000",
