--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: aurora
+name: anymex
 description: "AnymeX - One Stop for anime, manga, novels"
 publish_to: 'none'
 version: 2.8.3
@@ -40,10 +40,6 @@ dependencies:
   dio: ^5.7.0
   permission_handler: ^11.3.1
   flutter_local_notifications: ^18.0.1
-  media_kit: ^1.1.10+1
-  media_kit_video: ^1.2.4
-  media_kit_libs_video: ^1.0.4
-  window_manager: ^0.4.3
   flutter_web_auth_2: ^4.0.2
 dev_dependencies:
   flutter_test:
