--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: "adopt"
+          java-version: "17"
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -22,8 +28,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Android with Split ABI
-        run: |
-          flutter build apk --split-per-abi
+        run: flutter build apk --split-per-abi
 
       - name: Rename and Upload APKs (Split ABI)
         run: |
@@ -32,19 +37,16 @@ jobs:
           mv build/app/outputs/flutter-apk/app-x86_64-release.apk build/app/outputs/flutter-apk/app-x86_64-release-split.apk
 
       - name: Build Universal APK
-        run: |
-          flutter build apk --release
+        run: flutter build apk --release
 
       - name: Rename and Upload Universal APK
-        run: |
-          mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/app-release-universal.apk
+        run: mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/app-release-universal.apk
 
       - name: Upload Android Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: android-build
-          path: |
-            build/app/outputs/flutter-apk/*.apk
+          path: build/app/outputs/flutter-apk/*.apk
 
   build-ios:
     runs-on: macos-latest
@@ -61,8 +63,7 @@ jobs:
         run: flutter pub get
 
       - name: Build iOS (macOS only)
-        run: |
-          flutter build ios --release --no-codesign
+        run: flutter build ios --release --no-codesign
 
       - name: Upload iOS Artifacts
         uses: actions/upload-artifact@v3
@@ -76,6 +77,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ninja-build cmake g++
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -85,8 +91,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Linux
-        run: |
-          flutter build linux --release
+        run: flutter build linux --release
 
       - name: Upload Linux Artifact
         uses: actions/upload-artifact@v3
@@ -109,8 +114,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Windows
-        run: |
-          flutter build windows --release
+        run: flutter build windows --release
 
       - name: Create ZIP file for Windows Build
         run: |
@@ -123,54 +127,25 @@ jobs:
           name: windows-build
           path: build/windows/x64/runner/Release/AnymeX_Windows.zip
 
-          
-  generate-changelog:
-    runs-on: ubuntu-latest
+  build-macos:
+    runs-on: macos-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Get Latest Non-Pre-Release Tag
-        id: get_tag
-        run: |
-          LATEST_TAG=$(git tag --list | grep -vE "beta|alpha" | sort -V | tail -n 1)
-          echo "Latest non-pre-release tag: $LATEST_TAG"
-          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
-
-      - name: Generate Changelog
-        id: changelog
-        run: |
-          COMMITS=$(git log $LATEST_TAG..HEAD --pretty=format:"%H %s" --decorate --no-abbrev-commit)
-
-          CHANGELOG=""
-
-          while IFS= read -r line; do
-            HASH=$(echo "$line" | awk '{print $1}')
-            MESSAGE=$(echo "$line" | cut -d' ' -f2-)
-            CHANGELOG="$CHANGELOG$REPO_URL$HASH $MESSAGE\n"
-          done <<< "$COMMITS"
-
-          CHANGELOG="${CHANGELOG//'%'/'%25'}"
-          CHANGELOG="${CHANGELOG//$'\n'/'%0A'}"
-          CHANGELOG="${CHANGELOG//$'\r'/'%0D'}"
-          echo "CHANGELOG=$CHANGELOG" >> $GITHUB_ENV
-
-      - name: Create Snapshot Release
-        uses: softprops/action-gh-release@v2
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
-          repository: RyanYuuki/AnymeX
-          make_latest: true
-          draft: false
-          tag_name: v${{ github.run_number }}  
-          body: |
-            ${{ env.CHANGELOG }}
-          files: |
-            build_final/*
-            build/windows/x64/runner/Release/AnymeX_Windows.zip
-          token: ${{ secrets.SNAPSHOTS_REPO_SECRET }}
+          flutter-version: "3.22.3"
 
-      - name: Upload all APKs
+      - name: Get Dependencies
+        run: flutter pub get
+
+      - name: Build macOS
+        run: flutter build macos --release
+
+      - name: Upload macOS Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: all-apks
-          path: build_final/**
+          name: macos-build
+          path: build/macos/Build/Products/Release/*
