--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,8 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y ninja-build cmake g++
+          sudo apt-get install -y ninja-build cmake g++ libgtk-3-dev libblkid-dev liblzma-dev pkg-config libmpv-dev
+
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
